aks/deploy_poi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poi
  template:
    metadata:
      labels:
        app: poi
    spec:
      containers:
      - name: poi
        resources:
          requests: 
            cpu: 100m 
            memory: 128Mi 
          limits: 
            cpu: 250m
            memory: 256Mi
        image: registryubr8272.azurecr.io/tripinsights/poi:1.0
        volumeMounts:
        - name: secrets-store
          mountPath: "/secrets"
          readOnly: true
        ports:
          - name: poi
            containerPort: 8080
      volumes:
      - name: secrets-store
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: appli-secret-from-kv
            
---
apiVersion: v1
kind: Service
metadata:
  name: poi
  namespace: api
spec:
  type: ClusterIP
  selector:
    app: poi
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: 8080
