aks/deploy_user-java.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-java
  template:
    metadata:
      labels:
        app: user-java
    spec:
      containers:
      - name: user-java
        resources:
          requests: 
            cpu: 100m 
            memory: 128Mi 
          limits: 
            cpu: 250m
            memory: 256Mi
        image: registryubr8272.azurecr.io/tripinsights/user-java:1.0
        ports:
          - name: user-java
            containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: user-java
  namespace: api
spec:
  type: ClusterIP
  selector:
    app: user-java
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: 8083
